Ajusta conteudo de equipe.

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -1,5 +1,6 @@
 <div class="item">
-  <h3>Gustavo Martinelli:</h3>
+  <h3>Gustavo Martinelli</h3>
+  <h4 class="area"><strong>Coordenador geral</strong></h4>
   <img src="{{static_url}}/images/equipe/Gustavo.jpeg"/>
   <p> Doutor pela Faculty of Sciences – University of St. Andrews, UK (1994). Atualmente é
   pesquisador titular do Instituto de Pesquisa Jardim Botânico do Rio de Janeiro e coordenador do Centro
@@ -9,10 +10,15 @@
   Conselho de Administração da Fundação SOS Mata Atlântica; Chair do Brazilian Plant Red List Authority
   da IUCN. Tem experiência na área de Botânica, com ênfase em Taxonomia Vegetal, atuando
   principalmente nos seguintes temas: Bromeliaceae, Conservação, Mata Atlântica, Biodiversidade de
-  Montanhas,Taxonomia, Inventários e coordenação de expedições científicas.</p>
+  Montanhas,Taxonomia, Inventários e coordenação de expedições científicas.<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4783815J2" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> gmartine@cncflora.net
+  </p>
+
   </div>
 <div class="item">
   <h3>Eduardo Dalcin</h3>
+  <h4 class="area"><strong>Coordenador substituto</strong></h4>
   <img src="{{static_url}}/images/equipe/Eduardo.jpeg"/>
   <p> Doutor em Informática na Biodiversidade pela University of Southampton,
   (2005), graduado em Ciências Biológicas pela Universidade Gama Filho (1989). Sua experiência e
@@ -23,8 +29,47 @@
   técnico-científico do Sistema de Informação sobre a Biodiversidade Brasileira (SiBBr) do MCTI; e do
   Grupo Técnico da Flora do Mundo Online, meta da GSPC para 2020. No CNCFlora atua como
   coordenador substituto e faz parte da equipe dos projetos “Planejamento de ações para a conservação de
-  espécies ameaçadas de extinção” e "Projeto Desenvolvimento de sistemas e análises espaciais”.</p>
+  espécies ameaçadas de extinção” e "Projeto Desenvolvimento de sistemas e análises espaciais”.<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4786576P3" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> edalcin@jbrj.org</p>
   </div>
+<div class="item">
+  <h3>Ricardo Avancini Fernandes</h3>
+  <h4 class="area"><strong>Coordenador de Desenvolvimento de Sistemas e SIG</strong></h4>
+  <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
+  <p>Pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado
+    em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da
+    informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de
+    dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora coordena a equipe do
+    projeto “Desenvolvimento de sistemas e análises espaciais”, participando do desenvolvimento de
+    sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação
+    de artigos científicos e de documentos técnicos ou de divulgação científica.<br/><br/>
+    <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4210066U4" target="_blank">Currículo lattes</a></strong><br/>
+    <strong>Email:</strong> avancini@cncflora.jbrj.gov.br
+    </p>
+</div>
+<div class="item">
+  <h3>Tainan Messina</h3>
+  <h4 class="area"><strong>Coordenadora do projeto Lista Vermelha</strong></h4>
+  <img src="{{static_url}}/images/equipe/tainan.jpeg"/>
+  <p>No CNCFlora coordena o projeto
+    Vermelha”. Tem experiência nas áreas de biologia da conservação, conservação de espécies ameaçadas
+    da flora e na elaboração de documentos técnico-científicos e protocolos para conservação da natureza.
+    Também é Mestranda da Escola Nacional de Botânica Tropical – ENBT/JBRJ, graduada em Ciências
+    Biológicas (Licenciatura + Bacharelado) pela Pontifícia Universidade Católica de Campinas – PUC (2005).<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4576965Y6" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> tainan@cncflora.net
+    </p>
+</div>
+<div class="item">
+  <h3>Eline Martins</h3>
+  <h4 class="area"><strong>Coordenadora do projeto Planos de Ação</strong></h4>
+  <img src="{{static_url}}/images/equipe/Eline.jpg"/>
+  <p>Bióloga, doutora em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2013) e mestre em Conservação da Natureza pela Universidade Federal Rural do Rio de Janeiro – UFRRJ (2009). Trabalha com conservação de espécies com enfoque no desenvolvimento de estratégias de conservação para espécies ameaçadas de extinção e genética da conservação. No CNCFlora coordena o projeto “Planejamento de ações para a conservação de espécies da Flora ameaçadas de extinção”. Eline adora o contato com a natureza, ir à praia, praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados!<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4162048A7" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> eline@cncflora.net
+    </p>
+</div>
 <div class="item">
   <h3>Andrea Correia</h3>
   <img src="{{static_url}}/images/equipe/Andrea.jpeg"/>
@@ -53,7 +98,9 @@
     ferramentas de código livre (opensource). No CNCFlora faz parte da equipe de “Projeto Desenvolvimento
     de sistemas e análises espaciais”, onde é responsável pela criação e desenvolvimento do portal
     CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e
-    infraestrutura de tecnologia.</p>
+    infraestrutura de tecnologia.<br/><br/>
+  <strong>Email:</strong> diogo@cncflora.net
+  </p>
 </div>
 <div class="item">
   <h3>Leonardo Novaes</h3>
@@ -63,7 +110,10 @@
     informações geográficas (SIG), atuando principalmente nos seguintes temas: estudos ambientais e
     geotecnologias. No CNCFlora faz parte da equipe “Projeto Desenvolvimento de sistemas e análises
     espaciais”, participando na análise de dados, redação de artigos científicos e de documentos técnicos ou
-    de divulgação científica e produção cartográfica.</p>
+    de divulgação científica e produção cartográfica.<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4455856P9" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> leonardo@cncflora.net
+  </p>
 </div>
 <div class="item">
   <h3>Lucas Moraes</h3>
@@ -72,7 +122,10 @@
     nas análises de avaliação de risco de extinção. Além disso, possui partipação nas etapas de redação e
     editoração de documentos e no gerenciamento do banco de imagens. Possui graduação em Ciências
     Biológicas pela Universidade Federal do Rio de Janeiro, na modalidade Genética (2013). Tem experiência
-    nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens.</p>
+    nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens.<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> lucasmoraes@cncflora.net
+  </p>
 </div>
 <div class="item">
   <h3>Lucas Moulton</h3>
@@ -83,7 +136,9 @@
     Universidade de New England (University of New England), Austrália. Possui experiência com a
     elaboração, execução, redação e apresentação de estudo da resiliência de macrófitas submersas diante
     de aumento de nutrientes em sistema lêntico e como auxiliar de campo em estudos de fitossociologia da
-    Mata Nebular da Serra dos Orgãos.</p>
+    Mata Nebular da Serra dos Orgãos.<br/><br/>
+      <strong>Email:</strong> lmoulton@cncflora.net
+    </p>
 </div>
 <div class="item">
   <h3>Luiz Antonio Ferreira dos Santos Filho</h3>
@@ -92,7 +147,23 @@
     Úrsula (2009). Pós-graduado em Meio Ambiente pela COPPE/UFRJ (2012). Mestrando pela Escola
     Nacional de Botânica Tropical (ENBT/JBRJ). No Centro Nacional de Conservação da Flora (CNCFlora)
     atua no Projeto Lista Vermelha, coordenando o fluxo de trabalho da avaliação do risco de extinção da
-    flora, a redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+    flora, a redação de artigos científicos e de documentos técnicos ou de divulgação científica.<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4559241J9" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> luiz@cncflora.net
+    </p>
+</div>
+<div class="item">
+  <h3>Rodrigo Amaro da Fonseca e Silva</h3>
+  <img src="{{static_url}}/images/equipe/Rodrigo.jpeg"/>
+  <p>Integrante da equipe do projeto “Lista Vermelha" do
+  atua na avaliação de risco de espécies e composição de documentos técnico-científicos. Participa
+  também de atividades do projeto “Conservação ex situ”. Mestre em Ciência Ambiental (2012) e graduado
+  em Ciências Biológicas (2009) pela Universidade Federal Fluminense - UFF, tem experiências em
+  temáticas interdisciplinares, como gestão ambiental, conservação de espécies ameaçadas, planejamento
+  socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4238333Z3" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> rodrigo@cncflora.net
+    </p>
 </div>
 <div class="item">
   <h3>Raquel Negrão</h3>
@@ -106,29 +177,10 @@
     nos seguintes temas: estrutura e dinâmica de populações, ecologia de comunidades envolvendo
     levantamento fitossociológicos, distribuição espacial, estudo de ecótones e efeito de transições artificias,
     educação ambiental e conservação da biodiversidade. Possui experiência de campo em diferentes áreas
-    de Cerrado, Mata Atlântica e Restinga.</p>
-</div>
-<div class="item">
-  <h3>Ricardo Avancini Fernandes</h3>
-  <h4 class="area"><strong>coordenador de Desenvolvimento de Sistemas e SIG</strong></h4>
-  <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
-  <p>Pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado
-    em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da
-    informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de
-    dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora coordena a equipe do
-    projeto “Desenvolvimento de sistemas e análises espaciais”, participando do desenvolvimento de
-    sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação
-    de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
-</div>
-<div class="item">
-  <h3>Tainan Messina</h3>
-  <h4 class="area"><strong>coordenadora do projeto Lista Vermelha</strong></h4>
-  <img src="{{static_url}}/images/equipe/Tainan.jpeg"/>
-  <p>No CNCFlora coordena o projeto
-    Vermelha”. Tem experiência nas áreas de biologia da conservação, conservação de espécies ameaçadas
-    da flora e na elaboração de documentos técnico-científicos e protocolos para conservação da natureza.
-    Também é Mestranda da Escola Nacional de Botânica Tropical – ENBT/JBRJ, graduada em Ciências
-    Biológicas (Licenciatura + Bacharelado) pela Pontifícia Universidade Católica de Campinas – PUC (2005).</p>
+    de Cerrado, Mata Atlântica e Restinga.<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4717594P3" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> raquel@cncflora.net
+    </p>
 </div>
 <div class="item">
   <h3>Thiago Serrano de Almeida Penedo</h3>
@@ -138,7 +190,10 @@
     Sistemas de Informação Geográfica, Geoprocessamento e Biologia da Conservação. No CNCFlora faz
     parte do projeto “Desenvolvimento de sistemas e análises espaciais”, participando das análises espaciais
     relacionadas a conservação da flora, georreferenciamento e geoprocessamento, redação de artigos
-    científicos e de documentos técnicos ou de divulgação científica.</p>
+    científicos e de documentos técnicos ou de divulgação científica.<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4245432J4" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong>  thiago@cncflora.jbrj.gov.br
+    </p>
 </div>
 <div class="item">
   <h3>Julio Perota:</h3>
@@ -148,4 +203,50 @@
     “Conservação de espécies da flora criticamente em perigo de extinção do Cerrado Brasileiro”. Tem
     atuação em empresas corporativas com atividades relacionadas à pesquisa de mercado, atendimento e
     marketing interno.</p>
+</div>
+<div class="item">
+  <h3>Daniel Maurenza</h3>
+  <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
+  <p>Biologo e mestre em Ecologia pelo Instituto Nacional de Pesquisas da
+  Amazônia. No CNCFlora faz parte da equipe planejamento de ações para a conservação de
+  espécies ameaçadas de extinção, tendo como atribuição a análise de dados da flora, produção
+  científica e coleta de dados de campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> dmaurenza@cncflora.net
+    </p>
+</div>
+<div class="item">
+  <h3>Nina Pougy</h3>
+  <img src="{{static_url}}/images/equipe/Nina.jpg"/>
+  <p>Bióloga, com bacharel em Ecologia pela Universidade Federal do Rio de Janeiro -
+  UFRJ (2013). No CNCFlora, é coordenadora substituta do projeto “Planejamento de ações para a
+  conservação de espécies da Flora ameaçadas de extinção”. Também é responsável pelo
+  geoprocessamento e análises de dados espaciais e participa na elaboração de estratégias de
+  conservação para a flora ameaçada de extinção, nas expedições de campo e na redação de artigos
+  científicos, projetos e documentos técnicos. Nina adora viajar, ir à praia, praticar Yoga, tomar
+  banho de cachoeira e sair com os amigos!<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> nina@cncflora.net
+    </p>
+</div>
+<div class="item">
+  <h3>Marcio Verdi</h3>
+  <img src="{{static_url}}/images/equipe/Marcio.jpg"/>
+  <p>Biólogo e mestre em Botânica pela Universidade Federal Rio Grande Sul
+  (2013), cujos interesses estão voltados para a avaliação da biodiversidade e modelagem de
+  distribuição de espécies sobre diferentes cenários climáticos, com enfoque para conservação. No
+  CNCFlora participa de todos os processos envolvidos na elaboração de estratégias de
+  conservação para a flora ameaçada de extinção, da redação de artigos científicos e de
+  documentos técnicos ou de divulgação científica. Ele ainda é responsável pela coleta e
+  determinação do material botânico durante as expedições à campo. Verdi adora coletar e
+  fotografar plantas, tomar chimarrão e apreciar cervejas artesanais.<br/><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> verdi@cncflora.net
+    </p>
+</div>
+<div class="item">
+  <h3>Maria Lúcia</h3>
+  <img src="{{static_url}}/images/equipe/Maria.jpg"/>
+  <p>Doutoranda pela Escola Nacional de Botânica Tropical, possui graduação em Engenharia Florestal pela Universidade de Brasília (1983). Tem experiência na área de conservação e fortalecimento de jardins botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa o cargo de Tecnologista Senior III e integra a equipe do CNCFlora no projeto 'Conservação ex situ.
+    </p>
 </div>
