--- a/templates/content/pt-br/project/plano-de-acao.html
+++ b/templates/content/pt-br/project/plano-de-acao.html
@@ -115,7 +115,7 @@
   <div class="item">
       <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
       <p><strong>Daniel Maurenza</strong>
-        biologo e mestre em Ecologia pelo Instituto Nacional de Pesquisas da
+        Biologo e mestre em Ecologia pelo Instituto Nacional de Pesquisas da
         Amazônia. No CNCFlora faz parte da equipe planejamento de ações para a conservação de
         espécies ameaçadas de extinção, tendo como atribuição a análise de dados da flora, produção
         científica e coleta de dados de campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!<br/>
