--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -9,8 +9,17 @@
   <div class="description col-sm-8 col-md-8 col-lg-8">
     <h4><a href="{{base_url}}/pt-br/projetos/lista-vermelha">LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
     <p>
-      Após o lançamento do primeiro "Livro Vermelho da Flora do Brasil" em 2013, CNCFlora lançou o "Livro Vermelho - Plantas Raras do Cerrado. A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas consideradas raras na obra Plantas Raras do Brasil (Giulietti et al., 2009) e de ocorrência no domínio fitogeográfico Cerrado. O Cerrado é um dos hot spot mundial de biodiversidade, apresentando alto grau de endemismo e, por outro lado, alto grau de ameaças. Esta obra representa mais uma contribuição da comunidade científica, com a avaliação de 578 espécies para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção” do Ministério do Meio Ambiente.
-    </p>
+      Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
+      que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
+      priorizadas em medidas de conservação. O Cerrado é atualmente considerado uma das
+      áreas críticas para conservação e a perda de hábitat nesse bioma vem alcançando índices
+      alarmantes. Frente aos desafios de conservar espécies ameaçadas em função da
+      destruição paulatina dos seus hábitats, o objetivo do Livro Vermelho da flora do Brasil
+      – Plantas raras do Cerrado foi avaliar o risco de extinção de espécies consideradas raras
+      segundo o conceito de raridade de Giulietti et al. (2009) e com ocorrência e/ou
+      endêmicas do Cerrado. Assim, a partir da avaliação do risco de extinção das plantas
+      raras do Cerrado pretende-se subsidiar estratégias para o direcionamento de esforços
+      conservacionistas voltados as espécies mais suscetíveis à extinção iminente.</p>
   </div>
 </div>
 <div class="box-section box-project ">
@@ -23,7 +32,6 @@
   <div class="description col-sm-8 col-md-8 col-lg-8">
     <h4><a href="{{base_url}}/pt-br/projetos/plano-de-acao">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
     <p>
-      O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente. Para identificar quais as plantas em risco de extinção no país e em quais regiões estão localizadas, foram avaliadas cientificamente 4.617 espécies da flora brasileira já incluídas em listas oficiais de espécies ameaçada.
-    </p>
+      O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
   </div>
 </div>
