--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -1,10 +1,10 @@
   <h3>Lista Vermelha</h3>
   <div class="box-section col-sm-12 col-md-12 col-lg-12">
-      <div class="banner-full"><img src="{{static_url}}/images/vermelha.jpg" /></div>
+      <div class="banner-full"><img src="{{static_url}}/images/projetos/lista-vermelha/vermelha.jpg" /></div>
       <p>Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
         espécies da flora do Brasil, até o ano de 2020, para atender a meta 2 da
-        “Estratégia Global de Conservação de Plantas” (GSPC -
-        http://www.cbd.int/gspc/). Listas vermelhas constituem uma ferramenta
+        <a href="http://www.cbd.int/gspc/">“Estratégia Global de Conservação de Plantas”</a>.
+        Listas vermelhas constituem uma ferramenta
         importante para a priorização de investimentos na conservação de espécies e
         também demandam muitos recursos para sua construção e atualização
         (Rodinini et al., 2013).</p>
@@ -12,8 +12,8 @@
       <p>Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, que conta
         com uma equipe composta por profissionais formados em diferentes áreas
         ligadas às ciências da natureza, e treinados no uso dos critérios e categorias
-        da União Internacional para Conservação da Natureza (IUCN -
-        http://www.iucnredlist.org/). Além destes, o projeto atua em colaboração com
+        da <a href="http://www.iucnredlist.org/">União Internacional para Conservação da Natureza</a>.
+        Além destes, o projeto atua em colaboração com
         uma rede de especialistas colaboradores, que validam as análises realizadas
         pela equipe e contribuem para a consistência das avaliações de risco de
         extinção.</p>
@@ -33,17 +33,16 @@
         indicadas pelos especialistas.</p>
 
       <p>Com o conhecimento gerado, inicia-se o processo de “Avaliação de risco de
-        extinção” das espécies, seguindo o sistema de categorias e critérios (versão
-        3.1) estabelecidos pela IUCN
-        (http://www.iucnredlist.org/documents/2001RedListCats_Crit_Portugu%C3%AA
-        s.pdf). Durante essa etapa, as espécies são categorizadas em uma das
+        extinção” das espécies, seguindo o sistema de <a href="http://www.iucnredlist.org/documents/2001RedListCats_Crit_Portugu%C3%AA
+        s.pdf">categorias e critérios</a> (versão
+        3.1) estabelecidos pela IUCN. Durante essa etapa, as espécies são categorizadas em uma das
         categorias de risco de extinção:</p>
-      <div class="banner-medium"><img src="{{static_url}}/images/unnamed.png" /></div><br/>
+      <div class="banner-medium"><img src="{{static_url}}/images/projetos/lista-vermelha/unnamed.png" /></div><br/>
       <p>Quando as avaliações são concluídas elas são disponibilizadas novamente aos
         especialistas colaboradores, que podem enviar críticas e sugestões a respeito
         das avaliações realizadas. Posteriormente, as avaliações são publicadas no
-        portal (Link para parte de avaliações) e enviadas ao Ministério do Meio
-        Ambiente (MMA), responsável pela elaboração da Lista Oficial de Plantas
+        <a href="http://localhost:8889/pt-br/listavermelha">portal</a> e enviadas ao <a href="http://www.mma.gov.br/">Ministério do Meio
+        Ambiente (MMA)</a>, responsável pela elaboração da Lista Oficial de Plantas
         Ameaçadas do Brasil.</p>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
