--- a/templates/layout.html
+++ b/templates/layout.html
@@ -85,7 +85,7 @@
 								<a href="{{base_url}}/pt-br/projetos" class="projects">Projetos</a>
 								<ul class="list-projects">
 									<li><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></li>
-									<li><a href="{{base_url}}/pt-br/projetos/plano-de-acao">Plano de ação</a></li>
+									<li><a href="{{base_url}}/pt-br/projetos/planejamento-de-acoes">Planejamento de Ações</a></li>
 									<li><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></li>
 									<li><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></li>
 								</ul>
