--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,6 +128,11 @@
 	max-width: 50%;
 	margin: 10px 10px 5px 0px;
 }
+.project-page .banner-m img{
+	max-width: 30%;
+	float: left;
+	margin: 10px 10px 5px 0px;
+}
 
 .slide-equipe img{
 	float: left;
