--- a/templates/home.html
+++ b/templates/home.html
@@ -82,7 +82,11 @@
           <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg" alt="" /></a>
           <div class="inner">
             <h3><a href="{{base_url}}/pt-br/livros">Livro Vermelho - Plantas Raras do Cerrado</a></h3>
-            <p>Após o lançamento do primeiro "Livro Vermelho da Flora do Brasil" em 2013, CNCFlora lançou o "Livro Vermelho - Plantas Raras do Cerrado. A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas consideradas raras na obra Plantas Raras do Brasil (Giulietti et al., 2009) e de ocorrência no domínio fitogeográfico Cerrado.</p>
+            <p>Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
+              que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
+              priorizadas em medidas de conservação. O Cerrado é atualmente considerado uma das
+              áreas críticas para conservação e a perda de hábitat nesse bioma vem alcançando índices
+              alarmantes.</p>
           </div>
         </div>
       </section>
