--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -95,7 +95,7 @@
                 <a href="{{base_url}}/pt-br/projetos" class="projects" style="padding: 10px;">Projetos</a>
                 <ul class="list-projects">
                   <li><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></li>
-                  <li><a href="{{base_url}}/pt-br/projetos/plano-de-acao">Plano de ação</a></li>
+                  <li><a href="{{base_url}}/pt-br/projetos/planejamento-de-acoes">Planejamento de Ações</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></li>
                 </ul>
