--- a/templates/content/pt-br/project/index.html
+++ b/templates/content/pt-br/project/index.html
@@ -6,7 +6,7 @@
     <p>
         Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
         espécies da flora do Brasil, até o ano de 2020, para atender a meta 2 da
-        <a href="http://www.cbd.int/gspc/">“Estratégia Global de Conservação de Plantas”</a>. Listas vermelhas constituem uma ferramenta
+        <a href="http://www.cbd.int/gspc/" target="_blank">“Estratégia Global de Conservação de Plantas”</a>. Listas vermelhas constituem uma ferramenta
         importante para a priorização de investimentos na conservação de espécies e
         também demandam muitos recursos para sua construção e atualização
         (Rodinini et al., 2013).
@@ -15,14 +15,17 @@
 </div>
 <div class="box-section box-project ">
   <div class="description col-sm-12 col-md-12 col-lg-12">
-    <h4><a href="{{base_url}}/pt-br/projetos/plano-de-acao">Planos de Ação</a></h4>
+    <h4><a href="{{base_url}}/pt-br/projetos/planejamento-de-acoes">Planejamento de Ações</a></h4>
     <p>
-      Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de espécies da flora do
-      Brasil. Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, Red List Authority da
-      IUCN, cuja meta é avaliar o risco de extinção de todas as espécies da flora brasileira até o ano
-      de 2020, atendendo a meta 2 da “Estratégia Global de Conservação de Plantas” (sigla em
-      inglês GSPC) e a portaria 43.2014 do Ministério do Meio Ambiente (MMA) que institui o
-      programa Pró-espécies.
+      O planejamento de ações para a conservação da flora é a etapa seguinte à avaliação do risco de extinção das espécies. Após a elaboração de uma lista de espécies ameaçadas, torna-se necessário o planejamento e a implementação de ações que visem a retirada das espécies da lista.
+    </p>
+  </div>
+</div>
+<div class="box-section box-project ">
+  <div class="description col-sm-12 col-md-12 col-lg-12">
+    <h4><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Áreas Prioritárias</a></h4>
+    <p>
+      Em 2013, o CNCFlora publicou o Livro vermelho da flora do Brasil. Essa lista de espécies ameaçadas de extinção é uma ferramenta que indica quais plantas devem receber, prioritariamente, atenção por parte dos tomadores de decisão e da sociedade, sob pena de não estarem disponíveis para a geração futura, gerando perda de serviços ecossistêmicos caso não recebam a atenção devida. Porém, a lista não indica onde é preciso agir. É preciso elaborar documentos que guiem ações de conservação em locais estratégicos, visando impedir ou reverter o declínio populacional de espécies.
     </p>
   </div>
 </div>
