--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -181,7 +181,7 @@
 	Biológicas (Licenciatura + Bacharelado) pela Pontifícia Universidade Católica de Campinas – PUC (2005).</p>
     </div>
     <div class="item">
-        <img src="{{static_url}}/images/equipe/lista-vermelha/luiz.jpg"/>
+        <img src="{{static_url}}/images/equipe/Luiz.jpeg"/>
         <p><strong>Luiz Antonio Ferreira dos Santos Filho</strong>Graduado em Ciências Biológicas pela Universidade Santa
 	Úrsula (2009). Pós-graduado em Meio Ambiente pela COPPE/UFRJ (2012). Mestrando pela Escola
 	Nacional de Botânica Tropical (ENBT/JBRJ). No Centro Nacional de Conservação da Flora (CNCFlora)
