--- a/templates/home.html
+++ b/templates/home.html
@@ -131,12 +131,12 @@
     </div>
   </div>
   <template id="noticia_tmpl">
-  <section class="col-sm-4 col-md-4 col-lg-4">
+  <section class="col-sm-12 col-md-4 col-lg-4">
     <div class="box post">
       <div class="box-fb-img">
         <a href="#" class="image "><img src="" alt="" /></a>
       </div>
-      <div class="inner">
+      <div class="inner news-description">
         <h3></h3>
         <p></p>
       </div>
